logs/Slang/chapter-7/arrays/associative/methods/delete.sv.log
name: associative-arrays-delete
description: Test support of associative arrays methods (delete)
should_fail: 0
tags: 7.9.2 7.9
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-7/arrays/associative/methods/delete.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-7/arrays/associative/methods/delete.sv:9:11: error: expected expression
int map [ string ];
          ^~~~~~
